corretti url nei template

--- a/pcto/templates/aziende.html
+++ b/pcto/templates/aziende.html
@@ -42,7 +42,7 @@
 
                      function dettaglio(piva) {
                       // vai alla pagina di dettaglio Azienda     
-                            url = "{% url 'OffPcto:aziende' %}" + piva;
+                            url = "{% url 'pcto:aziende' %}" + piva;
                             document.location = url;
                      }
               </script>
