--- a/pcto/templates/index.html
+++ b/pcto/templates/index.html
@@ -12,7 +12,7 @@
         </p>      
     </div>
    
-   <img id="imm1" src={% static "OffPcto/immagine.jpeg" %}>
+   <img id="imm1" src={% static "pcto/immagine.jpeg" %}>
    
    <div id=descrizione>
     <p>Il cambiamento di nome ha voluto indicare un cambiamento di prospettiva, rispetto agli obiettivi 
