cambiato url di admin diretto all'azienda

--- a/pcto/templates/dettaglio_azienda.html
+++ b/pcto/templates/dettaglio_azienda.html
@@ -30,7 +30,7 @@
     </div>
     
    
-    <a href="/admin/pcto/aziende ">Admin</a>
+    <a href="/admin/pcto/aziende/{{azienda.id}}">Admin</a>
     <h3>Contatti</h3>
     <hr>
        
