aggiunto numero di aziende in elenco aziende

--- a/pcto/templates/aziende.html
+++ b/pcto/templates/aziende.html
@@ -60,7 +60,7 @@
                      Settore: {{myfilter.form.settore}}
                      <input type="submit" value="cerca">
               </form>
-              <span id="titolo">Elenco Aziende</span> Pagina {{numpag}} di {{totpagine}}
+              <span id="titolo">Elenco Aziende</span> Pagina {{numpag}} di {{totpagine}} ({{numero_aziende}} aziende)
               <table>
                       <th>Ragione Sociale <th> Comune <th> Provincia <th> Settore              
                       {%for nome in object_list %}
