--- a/pcto/static/pcto/index.css
+++ b/pcto/static/pcto/index.css
@@ -65,7 +65,7 @@ header ul h2 a.active
 
 #logo1 {
     position: absolute;
-    top: 1%;
+    top: 0px;
     left: 3%;
      width: 120px; 
      height: 120px;
