--- a/pcto/templates/base.html
+++ b/pcto/templates/base.html
@@ -21,7 +21,7 @@
                 <h2><a href="{% url 'pcto:aziende' %}" class="aziende">AZIENDE</a></h2>
                 <h2><a href="{% url 'pcto:tutor' %}" class="tutor"> AREA TUTOR</a></h2>
                 <h2><a href="" class="studenti">STUDENTI</a></h2>
-                <h2><a href="" class="tutor"> LOG-IN</a></h2>
+                <h2><a href="/admin" class="tutor"> LOG-IN</a></h2>
           </ul>
              
         </header>
