--- a/pcto/templates/dettaglio_azienda.html
+++ b/pcto/templates/dettaglio_azienda.html
@@ -2,8 +2,8 @@
 
 {%block head%}
         <style>
-            #dati {text-align: center; margin-top: 30px;}
-            #dati b {color:brown;}
+            .dati {text-align: center; margin-top: 30px;}
+            .dati b,.contatto b {color:brown;}
             #settore {text-align:center; margin-top: -20px; }
             #container { margin:auto; background: pink}
             .commento { margin-top: 5px; margin-right: 10px;
@@ -23,7 +23,7 @@
     <div id=settore>
        {{azienda.settore}}
     </div>
-    <div id="dati">
+    <div class="dati">
           
            <b>Telefono:</b> {{azienda.telefono}} <b>Email:</b> {{azienda.email}} <br>
            <b>Comune:</b> {{azienda.sede_comune}} <b>Prov. :</b> {{azienda.sede_provincia}}
@@ -37,6 +37,7 @@
         {% for con in contatti %}
                 <div class="contatto">
                     {{con.data}} {{con.tutor}} <p>
+                    <b>Numero studenti:</b> {{con.num_studenti}} - <b>Periodo Da</b>: {{con.periodo_da}} <b>A:</b> {{con.periodo_a}}<p>  
                     <textarea class="commento">{{con.note}}</textarea>                  
                 </div>
         {% endfor %}
