--- a/pcto/templates/index.html
+++ b/pcto/templates/index.html
@@ -16,18 +16,20 @@
    
    <div id=descrizione>
     <p>Il cambiamento di nome ha voluto indicare un cambiamento di prospettiva, rispetto agli obiettivi 
-       originari. <br/>
+       originari. 
        Ricadono infatti, sotto la nuova denominazione, non esclusivamente gli scambi studenti-aziende, ma 
-       tutte quelle iniziative volte 
-       ad avvicinare le esperienze <br/>degli studenti, alle esigenze di formazione trasversale e 
+       tutte quelle iniziative volte ad avvicinare le esperienze degli studenti, alle esigenze di formazione trasversale e 
        orientamento alle necessità della vita sociale e lavorativa.</p>    
     <p>L’attività è coordinata da una serie di Tutor, scelti fra i docenti delle diverse classi. 
     <p>
       Si aggiunge per l’espletamento delle pratiche necessarie all’attività un distaccamento di un
-      docente nel ruolo <br/>di assistenza alla figura strumentale.<br/>
-      <br/ clear=all> Le attività di PCTO sono regolamentata da normative ministeriali, 
+      docente nel ruolo di assistenza alla figura strumentale.<p>
+      Le attività di PCTO sono regolamentata da normative ministeriali, 
       che coinvolgono le classi del triennio di tutti gli indirizzi e che fissano il monte ore 
       minimo che ciascun studente dovrà soddisfare, diversificato per indirizzi.
+      <br clear="all">Da un'analisi della prof.ssa Agresta e implementazione prof.Falco, 
+      questo software nasce per supportare l'attività dei tutor e coinvolgere gli studenti
+      in un compito di realtà.
     </p>
       
  
