sistemata larghezza tab tutor

--- a/pcto/templates/tutor.html
+++ b/pcto/templates/tutor.html
@@ -2,12 +2,12 @@
        {%block head %}
        <style>
               h2 {text-align: center;}
-              #container {width:50%;
+              #container {width:70%;
                           margin: auto;
                          }
               .nome {width: 30%;}
               .classe {width:}
-              table {width: 90%;}
+              table {width: 90%; margin:auto;}
               th  {background: #C90;}
               td  {padding-left: 15; background: lavender;}
        </style>
