corretta imprecisione negli indirizzi e nel css

--- a/pcto/templates/dettaglio_azienda.html
+++ b/pcto/templates/dettaglio_azienda.html
@@ -17,6 +17,7 @@
                    margin-bottom: 50px;
                   }
             th  {background: #C90;}
+            td  {color: lavender;}
             textarea {margin-bottom: 10px;}
         </style>   
         
