colore della riga tabella abbinamenti corretto

--- a/pcto/templates/dettaglio_azienda.html
+++ b/pcto/templates/dettaglio_azienda.html
@@ -17,7 +17,7 @@
                    margin-bottom: 50px;
                   }
             th  {background: #C90;}
-            td  {color: lavender;}
+            td  {background: lavender;}
             textarea {margin-bottom: 10px;}
         </style>   
         
