--- a/pcto/templates/base.html
+++ b/pcto/templates/base.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="{% url 'pcto:index' %}" class="active">PCTO</a></li>
                 <li><a href="{% url 'pcto:aziende' %}" class="aziende">AZIENDE</a></li>
-                <li><a href="{% url 'pcto:tutor' %}" class="tutor"> AREA TUTOR</a></li>
+                <li><a href="{% url 'pcto:tutor' %}" class="tutor">TUTOR</a></li>
                 <li><a href="" class="studenti">STUDENTI</a>
                     <ul>
                         <li><a href="{% url 'pcto:studenti' 'AF' %} ">Affari e Finanza</a></li>
