--- a/pcto/templates/contatti.html
+++ b/pcto/templates/contatti.html
@@ -19,7 +19,7 @@
 
 {% block content %}
 <div id="container">
-<h3><a href="javascript:window.print()">Contatti</a></h3>
+<h3><a href="{%url 'pcto:elenco_abbinamenti' %}">Elenco Abbinamenti</a></h3>
 <table>
     <th>Data</th><th>Tutor</th><th>Azienda</th><th>Posti</th>.<th>Disp.<th>Da</th><th>A</th><th>Note</th>
 
