aggiunti contatti e abbinamenti al menu

--- a/pcto/templates/base.html
+++ b/pcto/templates/base.html
@@ -34,6 +34,8 @@
 
                     </ul>
                 </li>
+                <li><a href="{% url 'pcto:contatti' %}">CONTATTI</a></li>
+                <li><a href="{%url 'pcto:elenco_abbinamenti' %}">ABBINAMENTI</a></li>
                 <li>AUTENTICAZIONE 
                     <ul>
                         <li><a href="/admin" class="tutor"> LOG-IN</a></li>
