colore di sfondo abbinamenti e contatti

--- a/pcto/templates/contatti.html
+++ b/pcto/templates/contatti.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="w3.container w3-light-blue" >
+<div class="w3.container w3-pale-blue" >
     <h1 class="w3-text-black">Elenco Contatti</h1>
 <table class="w3-table-all w3-card-4" style="width:90%; margin: auto;">
     <th>Data</th><th>Tutor</th><th>Azienda</th><th>Posti</th>.<th>Disp.<th>Da</th><th>A</th><th>Note</th>
