--- a/pcto/templates/abbinamenti.html
+++ b/pcto/templates/abbinamenti.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<div class="w3.container w3-light-blue" >
+<div class="w3.container w3-pale-red" >
 
     <h1 class="w3-text-black">Elenco abbinamenti</h1>
 
