form contatti con datepicker

--- a/pcto/templates/dettaglio_azienda.html
+++ b/pcto/templates/dettaglio_azienda.html
@@ -20,7 +20,7 @@
             th  {background: lightgray;}
             td  {background: lavender;}
             textarea {margin-bottom: 10px;}
-            .periodo {}
+            #id_num_studenti {width:60px;}
         </style>   
         
         <script>
