aggiunto grafico a statistiche

--- a/pcto/templates/statistica.html
+++ b/pcto/templates/statistica.html
@@ -12,6 +12,10 @@
     .azienda {width: 20%;}
     
 </style>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+
+
+
 {% endblock %}
 
 {% block content %}
@@ -27,7 +31,32 @@
             
         </tr>
     {% endfor %}
+    <div id="container" style="width: 50%;">
+        <canvas id="chart"></canvas>
+    </div>
+    <script>
 
+        var config = {
+          type: 'bar',
+          data: {
+            datasets: [{
+              data: {{ data|safe }},
+              backgroundColor: ['gray', 'blue', 'green', 'red', 'orange','purple','navy'],
+              label: 'Totale Abbinamenti',
+            }],
+            labels: {{ labels|safe }}
+          },
+          options: {
+            responsive: true
+          }
+        };
+    
+        window.onload = function() {
+          var ctx = document.getElementById('chart').getContext('2d');
+          window.myPie = new Chart(ctx, config);
+        };
+    
+      </script>
 </table> 
 <p>
 <table class="w3-table-all w3-card-4" style="width:50%; margin: auto;">
