--- a/pcto/templates/index.html
+++ b/pcto/templates/index.html
@@ -35,5 +35,5 @@
  
     </div>
   	<hr/>
-        <div id=credits>Credits: A.S.2021-22 Classe: 4BSI Sistemi Informativi Aziendali</div>
+        <div id=credits>A.S.2021-22 4BSI Sistemi Informativi Aziendali - prof. G. Falco, prof.ssa S. Agresta</div>
 {% endblock %}
