--- a/pcto/templates/abbinamenti_azienda.html
+++ b/pcto/templates/abbinamenti_azienda.html
@@ -12,11 +12,12 @@
     .azienda {width: 20%;}
     
 </style>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 {% endblock %}
 
 {% block content %}
 <div class="w3.container w3-pale-blue" >
-    <h1 class="w3-text-black">Distribuzione di {{azienda}}</h1>
+    <h1 class="w3-text-black">{{azienda}}</h1>
 <table class="w3-table-all w3-card-4" style="width:30%; margin: auto;">
     <th>Anno</th><th>Num.Abbinamenti</th>
 
@@ -28,7 +29,36 @@
     {% endfor %}
 
 </table> 
+<div id="container" style="width: 50%;">
+    <canvas id="chart"></canvas>
+</div>
+<script>
 
+    var config = {
+      type: 'bar',
+      data: {
+        datasets: [{
+          data: {{ data|safe }},
+          backgroundColor: ['gold', 'blue', 'green', 'red', 'orange','purple','navy'],
+          label: 'Distribuzione Abbinamenti',
+        }],
+        labels: {{ labels|safe }}
+      },
+      options: {
+        scales: {
+            y: {
+                beginAtZero: true
+            }
+        }
+      }
+    };
+
+    window.onload = function() {
+      var ctx = document.getElementById('chart').getContext('2d');
+      window.myPie = new Chart(ctx, config);
+    };
+
+  </script>
 </div>
 
 
